--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="backgroundBorder">
         <div>
             <aside>
-                <img src="./img/pc.jpg" alt="My foto" id="myPhoto">
+                <img src="./img/photo.jpg" alt="My foto" id="myPhoto">
                 <div class="SidebarText">
                     <div>
                         <h3>Contacts</h3>
